# power-monitor

./: .gitignore  CMakeLists.txt  Makefile  PowerMonitor.gaphor  README.md  power.c  power.h  power.hex  power.lss  project.h  sensor.c  sensor.h  shutdown.py  shutdown_monitor.py  shutdown_monitor.service  spi.c  spi.h
spi_tryout/: spi_tryout.ino
